# hyperion

./: .bazelrc  .gitignore  Dockerfile  NO_BUILD_AMD64  README.md  WORKSPACE  docker-compose.yml
.buildkite/: .bazelrc  Dockerfile  cached-pipeline.yml  docker-compose.yml  pipeline.yml
cargo/: BUILD  BUILD.bazel  Cargo.toml  crates.bzl  regenerate.sh
cargo/overrides/backtrace-sys-0.1.32/: BUILD.bazel
cargo/overrides/libloading-0.5.2/: BUILD
cargo/remote/: aho-corasick-0.7.10.BUILD.bazel  aho-corasick-0.7.6.BUILD.bazel  aho-corasick-0.7.8.BUILD.bazel  aho-corasick-0.7.9.BUILD.bazel  alga-0.9.0.BUILD.bazel  alga-0.9.2.BUILD.bazel  alga-0.9.3.BUILD.bazel  aligned-0.3.2.BUILD.bazel  anyhow-1.0.26.BUILD.bazel  approx-0.3.2.BUILD.bazel  as-slice-0.1.0.BUILD.bazel  as-slice-0.1.2.BUILD.bazel  atty-0.2.14.BUILD.bazel  backtrace-0.3.42.BUILD.bazel  backtrace-0.3.44.BUILD.bazel  backtrace-0.3.45.BUILD.bazel  backtrace-sys-0.1.32.BUILD.bazel  backtrace-sys-0.1.33.BUILD.bazel  bare-metal-0.2.5.BUILD.bazel  bindgen-0.53.1.BUILD.bazel  bindgen-0.53.2.BUILD.bazel  cast-0.2.3.BUILD.bazel  cc-1.0.36.BUILD  cexpr-0.3.6.BUILD.bazel  cexpr-0.4.0.BUILD.bazel  cfg-if-0.1.7.BUILD.bazel  clang-sys-0.28.1.BUILD.bazel  clang-sys-0.29.2.BUILD.bazel  clap-2.33.0.BUILD.bazel  cortex-m-0.6.2.BUILD.bazel  env_logger-0.7.1.BUILD.bazel  error-chain-0.12.1.BUILD.bazel  error-chain-0.12.2.BUILD.bazel  fixedvec-0.2.3.BUILD  flatbuffers-0.6.0.BUILD  flatbuffers-0.6.0.BUILD.bazel  generic-array-0.12.0.BUILD.bazel  generic-array-0.12.3.BUILD.bazel  generic-array-0.13.2.BUILD.bazel  glob-0.3.0.BUILD.bazel  (+76 more)
controls/: BUILD.bazel  lti_gains_writer_rust.py  lti_utils.py
controls/estimation/: BUILD.bazel  filter.py  kalman.py  kalman_test.py
controls/estimation/kalman/python/: filter.py  kalman_test.py
controls/modeling/: BUILD.bazel  common_motors.py  dcmotor.py  dcmotor_test.py  integration.py
controls/swerve/: BUILD.bazel  module.py
docker/builder/: Dockerfile
docker/cached/: Dockerfile
docs/: index.md
experimental/lmracek/kalman/: BUILD  kalman.py  kalman_test.py
rnix/: Cargo.toml
rnix/src/: lib.rs  tests.rs
synchronization/: BUILD.bazel  futex.rs  futex_test.rs
tools/cpp/: BUILD  BUILD.bazel  arm_frc_linux_gnueabi.bzl  arm_none_eabi_gcc_config.bzl  register.bzl  x86_64_linux_gnueabihf_bionic_clang.BUILD  x86_64_linux_gnueabihf_config.bzl  x86_64_linux_gnueabihf_sysroot.BUILD  x86_64_linux_gnueabihf_ubuntu_config.bzl
tools/cpp/arm_frc_linux_gnueabi/: BUILD  arm-frc-linux-gnueabi-ar  arm-frc-linux-gnueabi-as  arm-frc-linux-gnueabi-cpp  arm-frc-linux-gnueabi-dwp  arm-frc-linux-gnueabi-gcc  arm-frc-linux-gnueabi-gcov  arm-frc-linux-gnueabi-ld  arm-frc-linux-gnueabi-nm  arm-frc-linux-gnueabi-objcopy  arm-frc-linux-gnueabi-objdump  arm-frc-linux-gnueabi-strip
tools/cpp/arm_none_eabi_gcc/: BUILD.bazel  arm-none-eabi-ar  arm-none-eabi-as  arm-none-eabi-cpp  arm-none-eabi-gcc  arm-none-eabi-gcov  arm-none-eabi-ld  arm-none-eabi-nm  arm-none-eabi-objcopy  arm-none-eabi-objdump  arm-none-eabi-strip
tools/cpp/hello_world/: BUILD  cc_check.sh  hello_world.cc
tools/cpp/x86_64_linux_gnueabihf/: BUILD  x86_64-linux-gnueabihf-ar  x86_64-linux-gnueabihf-as  x86_64-linux-gnueabihf-clang  x86_64-linux-gnueabihf-gcov  x86_64-linux-gnueabihf-ld  x86_64-linux-gnueabihf-nm  x86_64-linux-gnueabihf-objcopy  x86_64-linux-gnueabihf-objdump  x86_64-linux-gnueabihf-strip
tools/cpp/x86_64_linux_gnueabihf_bionic/: BUILD.bazel  x86_64-linux-gnueabihf-ar  x86_64-linux-gnueabihf-as  x86_64-linux-gnueabihf-clang  x86_64-linux-gnueabihf-gcov  x86_64-linux-gnueabihf-ld  x86_64-linux-gnueabihf-nm  x86_64-linux-gnueabihf-objcopy  x86_64-linux-gnueabihf-objdump  x86_64-linux-gnueabihf-strip
tools/cpp/x86_64_linux_gnueabihf_disco/: BUILD.bazel  x86_64-linux-gnueabihf-ar  x86_64-linux-gnueabihf-as  x86_64-linux-gnueabihf-clang  x86_64-linux-gnueabihf-gcov  x86_64-linux-gnueabihf-ld  x86_64-linux-gnueabihf-nm  x86_64-linux-gnueabihf-objcopy  x86_64-linux-gnueabihf-objdump  x86_64-linux-gnueabihf-strip
tools/embedded/: BUILD.bazel  macros.bzl
tools/embedded/descriptions/: BUILD.bazel  STM32F765.svd  STM32F7x7.svd  STM32F7x8.svd  STM32F7x9.svd  device.x
tools/embedded/hardware/: BUILD.bazel  link.x
tools/flatbuffers/: rust.bzl
tools/flatbuffers/tests/: BUILD  test.fbs  test.rs
tools/rust/: BUILD  BUILD.bazel  compiler_helpers.bzl  register.bzl  toolchains.bzl
tools/rust/hello_world/: BUILD  BUILD.bazel  rust_check.sh
utilities/: BUILD.bazel  filedump_panic.rs  libunreachable.rlib  pcheck.rs  unreachable.rs
wpilib/bindings/: BUILD  bindgen.rs
wpilib/hal/: BUILD.bazel  digital.rs  error.rs  interrupts.rs  lib.rs  pneumatics.rs  robot_base.rs
