[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
nalgebra = "~0.18.0"
flatbuffers = {git = "https://github.com/m3rcuriel/flatbuffers", branch = "fixedvec"}
nix = "0.13.0"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
genmode = "Remote"

# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

[raze.crates.typenum.'1.10.0']
gen_buildrs = true
