[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
nalgebra = "~0.18.0"
flatbuffers = {git = "https://github.com/m3rcuriel/flatbuffers", branch = "fixedvec"}
svd2rust = {git =  "https://github.com/rust-embedded/svd2rust" }
libc = "0.2.66"
proc-macro2 = "1.0.8"
typenum = "~1.10.0"
cortex-m = "0.6"
as-slice = "=0.1.0"
bare-metal = "0.2.5"
vcell = "0.1.2"
bindgen = "0.53.1"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
genmode = "Remote"
output_buildfile_suffix = "BUILD.bazel"

# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

[raze.crates.log.'0.4.8']
additional_flags = [
  "--cfg=atomic_cas"
]

[raze.crates.backtrace.'0.3.44']
gen_buildrs = true
# Overriden to hand-written BUILD file, because libloading is building its own c portion.
skipped_deps = [
    "backtrace-sys-0.1.32",
]
additional_deps = [
    "@//cargo/overrides/backtrace-sys-0.1.32:backtrace_sys",
]

[raze.crates.typenum.'1.10.0']
gen_buildrs = true

[raze.crates.svd2rust.'0.17.0']
gen_buildrs = true
extra_aliased_targets = [
  "cargo_bin_svd2rust"
]

[raze.crates.libc.'0.2.67']
additional_flags = [
   "--cfg=libc_core_cvoid",
   "--cfg=libc_priv_mod_use"
]

[raze.crates.proc-macro2.'1.0.9']
additional_flags = [
    "--cfg=use_proc_macro",
]

[raze.crates.bindgen.'0.53.1']
gen_buildrs = true

[raze.crates.clang-sys.'0.28.1']
gen_buildrs = true
