load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_doc", "rust_doc_test")

rust_library(
    name = "futex",
    srcs = ["futex.rs"],
    deps = [
        "//utilities:unreachable",
        "//cargo:libc",
        "//cargo:nix",
        "//cargo:lock_api",
    ],
)

rust_doc(
    name = "futex_docs",
    dep = ":futex", 
)

rust_doc_test(
    name = "futex_docs_test",
    dep = ":futex",
)
