py_library(
    name = "filter",
    srcs = [
        "filter.py",
    ],
    visibility = ["//visibility:public"],
)

py_library(
    name = "python_init",
    srcs = [
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["//controls:python_init"],
)

py_library(
    name = "kalman_filter",
    srcs = [
        "kalman.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":filter",
        ":python_init",
    ],
)

py_test(
    name = "kalman_test",
    srcs = [
        "kalman_test.py",
    ],
    legacy_create_init = False,
    deps = [
        ":kalman_filter",
        ":python_init",
    ],
)
