load(":x86_64_linux_gnueabihf_ubuntu_config.bzl", x86_64_configure = "cc_toolchain_config")
load(":arm_none_eabi_gcc_config.bzl", arm_configure = "cc_toolchain_config")
load(":arm_frc_linux_gnueabi.bzl", roborio_configure = "cc_toolchain_config")

package(default_visibility = ["//tools/cpp:__pkg__"])

filegroup(
    name = "empty",
    srcs = [],
)

cc_toolchain_suite(
    name = "toolchain",
    toolchains = {
        "k8": "cc-compiler-bionic-x86_64",
        "k8-disco|clang": "cc-compiler-disco-x86_64",
        "m7f": "cc-compiler-cortex-m7f",
    },
    visibility = ["//visibility:public"],
)

x86_64_configure(
    name = "x86_64_toolchain_bionic_config",
    distro = "bionic",
)

x86_64_configure(
    name = "x86_64_toolchain_disco_config",
    distro = "disco",
)

roborio_configure(
    name = "linux_roborio_toolchain_config",
)

filegroup(
    name = "clang_disco_x86_64_linux_gnueabihf_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_disco:all-tools",
        "@x86_64_clang_8_disco//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_disco_x86_64_linux_gnueabihf_compiler_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_disco:as",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:ld",
        "@x86_64_clang_8_disco//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_disco_x86_64_linux_gnueabihf_ar_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_disco:ar",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:ld",
        "@x86_64_clang_8_disco//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_disco_x86_64_linux_gnueabihf_linker_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_disco:ar",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_disco:ld",
        "@x86_64_clang_8_disco//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_bionic_x86_64_linux_gnueabihf_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:all-tools",
        "@x86_64_clang_8_bionic//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_bionic_x86_64_linux_gnueabihf_compiler_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:as",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:ld",
        "@x86_64_clang_8_bionic//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_bionic_x86_64_linux_gnueabihf_ar_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:ar",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:ld",
        "@x86_64_clang_8_bionic//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

filegroup(
    name = "clang_bionic_x86_64_linux_gnueabihf_linker_files",
    srcs = [
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:ar",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:clang",
        "//tools/cpp/x86_64_linux_gnueabihf_bionic:ld",
        "@x86_64_clang_8_bionic//:compiler_libraries",
        "@x86_64_sysroot//:compiler_libraries",
    ],
)

toolchain(
    name = "cc-compiler-x86_64-bionic-toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "//tools/platforms:ubuntu-bionic",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
    ],
    toolchain = ":cc-compiler-bionic-x86_64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc-compiler-x86_64-disco-toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
        "//tools/platforms:ubuntu-disco",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
    ],
    toolchain = ":cc-compiler-disco-x86_64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "cc-compiler-bionic-x86_64",
    all_files = ":clang_bionic_x86_64_linux_gnueabihf_files",
    ar_files = ":clang_bionic_x86_64_linux_gnueabihf_ar_files",
    compiler_files = ":clang_bionic_x86_64_linux_gnueabihf_compiler_files",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":empty",
    linker_files = ":clang_bionic_x86_64_linux_gnueabihf_linker_files",
    objcopy_files = "//tools/cpp/x86_64_linux_gnueabihf_bionic:objcopy",
    static_runtime_lib = ":empty",
    strip_files = "//tools/cpp/x86_64_linux_gnueabihf_bionic:strip",
    supports_param_files = 1,
    toolchain_config = ":x86_64_toolchain_bionic_config",
    toolchain_identifier = "x86_64",
    visibility = ["//visibility:public"],
)

cc_toolchain(
    name = "cc-compiler-disco-x86_64",
    all_files = ":clang_disco_x86_64_linux_gnueabihf_files",
    ar_files = ":clang_disco_x86_64_linux_gnueabihf_ar_files",
    compiler_files = ":clang_disco_x86_64_linux_gnueabihf_compiler_files",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":empty",
    linker_files = ":clang_disco_x86_64_linux_gnueabihf_linker_files",
    objcopy_files = "//tools/cpp/x86_64_linux_gnueabihf_disco:objcopy",
    static_runtime_lib = ":empty",
    strip_files = "//tools/cpp/x86_64_linux_gnueabihf_disco:strip",
    supports_param_files = 1,
    toolchain_config = ":x86_64_toolchain_disco_config",
    toolchain_identifier = "x86_64",
    visibility = ["//visibility:public"],
)

arm_configure(
    name = "arm_cortex_m7f_config",
    cpu = "cortex-m7",
    fpu = "fpv5-sp-d16",
)

filegroup(
    name = "arm_none_eabi_gcc_files",
    srcs = [
        "//tools/cpp/arm_none_eabi_gcc:tool-wrappers",
        "@arm_none_eabi_gcc//:compiler_pieces",
    ],
)

filegroup(
    name = "arm_none_eabi_gcc_compiler_files",
    srcs = [
        "//tools/cpp/arm_none_eabi_gcc:as",
        "//tools/cpp/arm_none_eabi_gcc:gcc",
        "//tools/cpp/arm_none_eabi_gcc:ld",
    ],
)

filegroup(
    name = "arm_none_eabi_gcc_linker_files",
    srcs = [
        "//tools/cpp/arm_none_eabi_gcc:ar",
        "//tools/cpp/arm_none_eabi_gcc:gcc",
        "//tools/cpp/arm_none_eabi_gcc:ld",
        "@arm_none_eabi_gcc//:compiler_pieces",
    ],
)

cc_toolchain(
    name = "cc-compiler-cortex-m7f",
    all_files = ":arm_none_eabi_gcc_files",
    compiler_files = ":arm_none_eabi_gcc_compiler_files",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":empty",
    linker_files = ":arm_none_eabi_gcc_linker_files",
    objcopy_files = "//tools/cpp/arm_none_eabi_gcc:objcopy",
    static_runtime_lib = ":empty",
    strip_files = "//tools/cpp/arm_none_eabi_gcc:strip",
    supports_param_files = 1,
    toolchain_config = "arm_cortex_m7f_config",
    toolchain_identifier = "cortex-m7f",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "cc-compiler-cortex-m7f-toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
    ],
    target_compatible_with = [
        "//tools/platforms:cortex-m7f",
        "//tools/platforms:none",
    ],
    toolchain = ":cc-compiler-cortex-m7f",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

filegroup(
    name = "linux_roborio_all_files",
    srcs = [
        "//tools/cpp/arm_frc_linux_gnueabi:tool-wrappers",
        "//tools/cpp/arm_frc_linux_gnueabi:as",
        "//tools/cpp/arm_frc_linux_gnueabi:ar",
        "//tools/cpp/arm_frc_linux_gnueabi:gcc",
        "//tools/cpp/arm_frc_linux_gnueabi:libs",
        "@linux_arm_frc_linux_gnueabi_repo//:compiler_pieces",
    ],
)

filegroup(
    name = "linux_roborio_linker_files",
    srcs = [
        "//tools/cpp/arm_frc_linux_gnueabi:ld",
        "//tools/cpp/arm_frc_linux_gnueabi:ar",
        "//tools/cpp/arm_frc_linux_gnueabi:gcc",
        "//tools/cpp/arm_frc_linux_gnueabi:libs",
        "@linux_arm_frc_linux_gnueabi_repo//:compiler_pieces",
    ],
)

filegroup(
    name = "linux_roborio_compiler_files",
    srcs = [
        "//tools/cpp/arm_frc_linux_gnueabi:gcc",
        "//tools/cpp/arm_frc_linux_gnueabi:ld",
        "@linux_arm_frc_linux_gnueabi_repo//:compiler_components",
        "@linux_arm_frc_linux_gnueabi_repo//:compiler_pieces",
    ],
)

cc_toolchain(
    name = "cc-compiler-linux-roborio",
    all_files = ":linux_roborio_all_files",
    ar_files = "//tools/cpp/arm_frc_linux_gnueabi:ar",
    compiler_files = ":linux_roborio_compiler_files",
    dwp_files = ":empty",
    dynamic_runtime_lib = ":empty",
    linker_files = ":linux_roborio_linker_files",
    objcopy_files = "//tools/cpp/arm_frc_linux_gnueabi:objcopy",
    static_runtime_lib = ":empty",
    toolchain_config = ":linux_roborio_toolchain_config",
    toolchain_identifier = "roborio",
    strip_files = "//tools/cpp/arm_frc_linux_gnueabi:strip",
    supports_param_files = 1,
    visibility = ["//visibility:public"],
)

toolchain(
    name = "cc-compiler-linux-roborio-toolchain",
    exec_compatible_with = [
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
    target_compatible_with = [
        "@bazel_tools//platforms:linux",
        "//tools/platforms:roborio",
    ],
    toolchain = ":cc-compiler-linux-roborio",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
