package(default_visibility = ["//tools:__subpackages__"])

filegroup(
    name = "clang",
    srcs = [
        "x86_64-linux-gnueabihf-clang",
        "@x86_64_clang_8_bionic//:clang",
    ],
)

filegroup(
    name = "ar",
    srcs = [
        "x86_64-linux-gnueabihf-ar",
        "@x86_64_clang_8_bionic//:ar",
    ],
)

filegroup(
    name = "nm",
    srcs = [
        "x86_64-linux-gnueabihf-nm",
        "@x86_64_clang_8_bionic//:nm",
    ],
)

filegroup(
    name = "ld",
    srcs = [
        "x86_64-linux-gnueabihf-ld",
        "@x86_64_clang_8_bionic//:lld",
    ],
)

filegroup(
    name = "objcopy",
    srcs = [
        "x86_64-linux-gnueabihf-objcopy",
        "@x86_64_clang_8_bionic//:objcopy",
    ],
)

filegroup(
    name = "objdump",
    srcs = [
        "x86_64-linux-gnueabihf-objdump",
        "@x86_64_clang_8_bionic//:objdump",
    ],
)

filegroup(
    name = "strip",
    srcs = [
        "x86_64-linux-gnueabihf-strip",
        "@x86_64_clang_8_bionic//:strip",
    ],
)

filegroup(
    name = "as",
    srcs = [
        "x86_64-linux-gnueabihf-as",
        "@x86_64_clang_8_bionic//:as",
    ],
)

filegroup(
    name = "all-tools",
    srcs = [
        ":ar",
        ":as",
        ":clang",
        ":ld",
        ":nm",
        ":objcopy",
        ":objdump",
        ":strip",
    ],
)
